force-app/main/default/objects/Score_Formula__c/Score_Formula__c.object-meta.xml
<CustomObject>
    <label>Score Formula</label>
    <nameField>
        <label>Score Formula</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Score Formulas</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>