force-app/main/default/objects/Score_Formula__c/fields/Input_Question__c.field-meta.xml
<CustomField>
    <fullName>Input_Question__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Input Question</label>
    <referenceTo>Question__c</referenceTo>
    <relationshipLabel>Score Formulas (Input Question)</relationshipLabel>
    <relationshipName>Score_Formulas1</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>