force-app/main/default/objects/Score_Formula__c/fields/Parent_Question__c.field-meta.xml
<CustomField>
    <fullName>Parent_Question__c</fullName>
    <label>Parent Question</label>
    <referenceTo>Question__c</referenceTo>
    <relationshipLabel>Score Formulas</relationshipLabel>
    <relationshipName>Score_Formulas</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>